// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-5"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 TuOfP bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
              data-testid="PluginImage"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center space-x-2 text-left"
            >
              <span
                class="font-semibold link truncate max-w-88"
                data-testid="PluginListItem__link"
              >
                ARK Explorer
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <span
              class="w-50 text-theme-secondary-text truncate"
            >
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <span
              class="w-30 text-theme-secondary-text truncate"
            >
              1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <span
              class="text-theme-secondary-text"
            >
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk flex-1"
              data-testid="PluginListItem__install"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Install
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should render official icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-5"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 TuOfP bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
              data-testid="PluginImage"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center space-x-2 text-left"
            >
              <span
                class="font-semibold link truncate max-w-88"
                data-testid="PluginListItem__link"
              >
                ARK Explorer
              </span>
              <div
                class="sc-bdvvtL fCrhkg text-theme-warning-600"
                height="16"
                width="16"
              >
                <svg>
                  shield-check-mark.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <span
              class="w-50 text-theme-secondary-text truncate"
            >
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <span
              class="w-30 text-theme-secondary-text truncate"
            >
              1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <span
              class="text-theme-secondary-text"
            >
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk flex-1"
              data-testid="PluginListItem__install"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Install
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should trigger install 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-5"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 TuOfP bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-secondary-800 dark:text-theme-secondary-700"
              data-testid="PluginImage"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center space-x-2 text-left"
            >
              <span
                class="font-semibold link truncate max-w-88"
                data-testid="PluginListItem__link"
              >
                ARK Explorer
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <span
              class="w-50 text-theme-secondary-text truncate"
            >
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <span
              class="w-30 text-theme-secondary-text truncate"
            >
              1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <span
              class="text-theme-secondary-text"
            >
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 cxgwmk flex-1"
              data-testid="PluginListItem__install"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Install
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
